# Identity-Microservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  Enunciado_Candidato_Ing_SEK.md  docker-compose.yml  main.py  pyproject.toml  readme.md  request_documentation.md  requirements.txt  test_all_endpoints.sh  test_rate_limiting.sh
app/: __init__.py
app/core/: __init__.py  auth_middleware.py  config.py  database.py  jwt_manager.py  logger.py  middleware.py  policies.py  policy_validator.py  startup.py
app/models/: __init__.py  abac.py  auth.py  database.py  scim.py
app/repositories/: __init__.py  group_repository.py  policy_repository.py  user_repository.py
app/services/: __init__.py  abac_evaluator.py  auth_service.py  authz_service.py  scim_group_service.py  scim_user_service.py
app/views/: __init__.py  auth_router.py  authz.py  scim_groups.py  scim_users.py
policies/: policies.json
postman/: Auth.postman_collection.json  Authz.postman_collection.json  SCIM-Groups.postman_collection.json  SCIM-Users.postman_collection.json  desarrollo.postman_environment.json
tests/: __init__.py  test_authz_service.py
